--- a/EKS-TF/Jenkinsfile
+++ b/EKS-TF/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         }
         stage('Git Pulling') {
             steps {
-                git branch: 'master', url: 'https://github.com/gourishinde9021/DevOpsified-AWS.git'
+                git branch: 'main', url: 'https://github.com/gourishinde9021/DevOpsified-AWS.git'
             }
         }
         stage('Init') {
